--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,7 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties (https://fabricmc.net/develop/)
-minecraft_version=1.20.6
-yarn_mappings=1.20.6+build.1
-loader_version=0.15.11
-
-# Mod Properties
-mod_version=0.6
-maven_group=Wide-Cat
-archives_base_name=meteor-crash-addon
-
-meteor_version=0.5.7
+minecraft_version=1.21.8
+yarn_mappings=1.21.8+build.1
+loader_version=0.16.9
+fabric_version=0.99.0+1.21.8
