--- a/build.gradle
+++ b/build.gradle
@@ -10,18 +10,18 @@ group = project.maven_group
 
 repositories {
     mavenCentral()
-	maven { url "https://maven.meteordev.org/releases"}
-	maven { url "https://maven.meteordev.org/snapshots" }
+    maven { url "https://maven.meteordev.org/releases"}
+    maven { url "https://maven.meteordev.org/snapshots" }
 }
 
 dependencies {
-    // Minecraft
-    minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+    // Minecraft - UPDATED FOR 1.21.8
+    minecraft "com.mojang:minecraft:1.21.8"
+    mappings "net.fabricmc:yarn:1.21.8+build.1:v2"
+    modImplementation "net.fabricmc:fabric-loader:0.16.9"
 
-    // Meteor
-    modImplementation "meteordevelopment:meteor-client:${project.meteor_version}-SNAPSHOT"
+    // Meteor - UPDATED FOR 1.21.8
+    modImplementation "meteordevelopment:meteor-client:0.6.8" // Use the latest 1.21.8 version
 }
 
 processResources {
@@ -30,12 +30,12 @@ processResources {
     filesMatching("fabric.mod.json") {
         expand "version": project.version
 
-        filter { line -> line.replace("@mc_version@", project.minecraft_version) }
+        filter { line -> line.replace("@mc_version@", "1.21.8") }
         filter { line -> line.replace("@gh_hash@", System.getenv("GITHUB_SHA") ?: "") }
     }
 }
 
 tasks.withType(JavaCompile).configureEach {
-	it.options.encoding = "UTF-8"
-	it.options.release = 21
+    it.options.encoding = "UTF-8"
+    it.options.release = 21
 }
