--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,14 @@
-org.gradle.jvmargs=-Xmx2G
+# Done to increase the memory available to Gradle.
+org.gradle.jvmargs=-Xmx1G
 
-# Fabric Properties (https://fabricmc.net/develop/)
-minecraft_version=1.21.8
-yarn_mappings=1.21.8+build.1
-loader_version=0.16.9
-fabric_version=0.99.0+1.21.8
+# Mod Properties
+mod_version = 1.0.0
+maven_group = anticope.meteor
+archives_base_name = meteor-crash-addon
+
+# Dependencies Versions - UPDATED FOR 1.21.8
+minecraft_version = 1.21.8
+yarn_mappings = 1.21.8+build.1
+loader_version = 0.16.9
+fabric_version = 0.99.0+1.21.8
+meteor_version = 0.6.8
