--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,10 @@ dependencies {
     mappings "net.fabricmc:yarn:1.21.8+build.1:v2"
     modImplementation "net.fabricmc:fabric-loader:0.16.9"
 
-    // Meteor - UPDATED FOR 1.21.8
-    modImplementation "meteordevelopment:meteor-client:0.6.8" // Use the latest 1.21.8 version
+    // Meteor - FARKLI VERSİYONLARI DENE
+    modImplementation "meteordevelopment:meteor-client:0.6.0" // Önce bunu dene
+    // modImplementation "meteordevelopment:meteor-client:0.6.1" // Bu çalışmazsa bunu
+    // modImplementation "meteordevelopment:meteor-client:0.6.0-SNAPSHOT" // Veya bunu
 }
 
 processResources {
