--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,8 @@ dependencies {
     mappings "net.fabricmc:yarn:1.21.8+build.1:v2"
     modImplementation "net.fabricmc:fabric-loader:0.16.9"
 
-    // Meteor - FARKLI VERSİYONLARI DENE
-    modImplementation "meteordevelopment:meteor-client:0.6.0" // Önce bunu dene
-    // modImplementation "meteordevelopment:meteor-client:0.6.1" // Bu çalışmazsa bunu
-    // modImplementation "meteordevelopment:meteor-client:0.6.0-SNAPSHOT" // Veya bunu
+    // Meteor - DÜZELTİLMİŞ VERSİYON
+    modImplementation "meteordevelopment:meteor-client:0.6.2"
 }
 
 processResources {
