--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,8 @@ dependencies {
     mappings "net.fabricmc:yarn:1.21.8+build.1:v2"
     modImplementation "net.fabricmc:fabric-loader:0.16.9"
 
-    // Meteor - DÜZELTİLMİŞ VERSİYON
-    modImplementation "meteordevelopment:meteor-client:0.6.2"
+    // Meteor - DÜZELTİLDİ: 0.6.2 yerine 0.6.0 kullan (senin dosyana göre)
+    modImplementation "meteordevelopment:meteor-client:0.6.0"
 }
 
 processResources {
@@ -29,7 +29,6 @@ processResources {
 
     filesMatching("fabric.mod.json") {
         expand "version": project.version
-
         filter { line -> line.replace("@mc_version@", "1.21.8") }
         filter { line -> line.replace("@gh_hash@", System.getenv("GITHUB_SHA") ?: "") }
     }
